@@ -28,6 +28,7 @@ package de.uni_freiburg.informatik.ultimate.automata.partialorder;
 
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Stream;
 
@@ -37,6 +38,8 @@ import de.uni_freiburg.informatik.ultimate.automata.nestedword.VpAlphabet;
 import de.uni_freiburg.informatik.ultimate.automata.nestedword.transitions.OutgoingCallTransition;
 import de.uni_freiburg.informatik.ultimate.automata.nestedword.transitions.OutgoingInternalTransition;
 import de.uni_freiburg.informatik.ultimate.automata.nestedword.transitions.OutgoingReturnTransition;
+import de.uni_freiburg.informatik.ultimate.automata.partialorder.independence.IIndependenceRelation;
+import de.uni_freiburg.informatik.ultimate.automata.partialorder.independence.IIndependenceRelation.Dependence;
 import de.uni_freiburg.informatik.ultimate.automata.statefactory.IStateFactory;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.DataStructureUtils;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.ImmutableSet;
@@ -62,6 +65,19 @@ public class MinimalSleepSetReduction<L, S, R> implements INwaOutgoingLetterAndT
 
 	private final R mInitial;
 
+	/**
+	 * Create a new reduction automaton.
+	 *
+	 * @param operand
+	 *            The input automaton
+	 * @param stateFactory
+	 *            A state factory to create the reduction automaton's states
+	 * @param independenceRelation
+	 *            The independence relation up to which a reduction is computed. The input automaton must be closed up
+	 *            to this independence relation.
+	 * @param order
+	 *            The preference order for the reduction
+	 */
 	public MinimalSleepSetReduction(final INwaOutgoingLetterAndTransitionProvider<L, S> operand,
 			final ISleepSetStateFactory<L, S, R> stateFactory, final IIndependenceRelation<S, L> independenceRelation,
 			final IDfsOrder<L, R> order) {
@@ -72,8 +88,13 @@ public class MinimalSleepSetReduction<L, S, R> implements INwaOutgoingLetterAndT
 		mOrder = order;
 		mIndependence = independenceRelation;
 
-		final S oldInitial = DataStructureUtils.getOneAndOnly(operand.getInitialStates(), "initial state");
-		mInitial = mStateFactory.createSleepSetState(oldInitial, ImmutableSet.empty());
+		final var initial =
+				DataStructureUtils.getOnly(operand.getInitialStates(), "There must only be one initial state");
+		if (initial.isPresent()) {
+			mInitial = mStateFactory.createSleepSetState(initial.get(), ImmutableSet.empty());
+		} else {
+			mInitial = null;
+		}
 	}
 
 	@Override
@@ -93,12 +114,12 @@ public class MinimalSleepSetReduction<L, S, R> implements INwaOutgoingLetterAndT
 
 	@Override
 	public Iterable<R> getInitialStates() {
-		return Set.of(mInitial);
+		return mInitial == null ? Collections.emptySet() : Set.of(mInitial);
 	}
 
 	@Override
 	public boolean isInitial(final R state) {
-		return mInitial.equals(state);
+		return Objects.equals(mInitial, state);
 	}
 
 	@Override
@@ -124,6 +145,11 @@ public class MinimalSleepSetReduction<L, S, R> implements INwaOutgoingLetterAndT
 
 	@Override
 	public Iterable<OutgoingInternalTransition<L, R>> internalSuccessors(final R state, final L letter) {
+		final ImmutableSet<L> currentSleepSet = mStateFactory.getSleepSet(state);
+		if (currentSleepSet.contains(letter)) {
+			return Collections.emptySet();
+		}
+
 		final S currentState = mStateFactory.getOriginalState(state);
 		final var currentTransitionOpt = DataStructureUtils.getOnly(mOperand.internalSuccessors(currentState, letter),
 				"Automaton must be deterministic");
@@ -131,7 +157,6 @@ public class MinimalSleepSetReduction<L, S, R> implements INwaOutgoingLetterAndT
 			return Collections.emptySet();
 		}
 
-		final ImmutableSet<L> currentSleepSet = mStateFactory.getSleepSet(state);
 		final Comparator<L> comp = mOrder.getOrder(state);
 		final Stream<L> explored = mOperand.lettersInternal(currentState).stream()
 				.filter(x -> comp.compare(x, letter) < 0 && !currentSleepSet.contains(x));
@@ -139,7 +164,8 @@ public class MinimalSleepSetReduction<L, S, R> implements INwaOutgoingLetterAndT
 		// TODO factor out sleep set successor computation
 		final ImmutableSet<L> succSleepSet =
 				ImmutableSet.of((Set<L>) Set.of(Stream.concat(currentSleepSet.stream(), explored)
-						.filter(l -> mIndependence.contains(currentState, letter, l)).toArray()));
+						.filter(l -> mIndependence.isIndependent(currentState, letter, l) == Dependence.INDEPENDENT)
+						.toArray()));
 
 		final R succSleepSetState =
 				mStateFactory.createSleepSetState(currentTransitionOpt.get().getSucc(), succSleepSet);
